# viral-marketing

./: .gitignore  .gitignore.save  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
apps/accounts/: bank_code_choices.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0003_delete_users.py
apps/history/: apps.py  models.py
apps/history/migrations/: 0001_initial.py
apps/notifications/: admin.py  models.py
apps/notifications/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/users/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
apps/users/accounts/migrations/: 0001_initial.py  0002_users_remove_accounts_id_accounts_account_id_and_more.py
apps/users/migrations/: 0001_initial.py  0002_alter_users_email_alter_users_password.py
config/: __init__.py  settings.py  settings.py.save  urls.py
config/settings/: base.py  dev.py  prod.py
docs/: api_spec.md
scripts/: run.sh
static/css/: custom.css
staticfiles/css/: custom.css
templates/admin/: base_site.html
utils/: jwt_serializers.py
