[tool.poetry]
name = "viral-marketing"
version = "0.1.0"
description = "Viral marketing Django project for Team6"
authors = ["Team6 <team6@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.7"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
django-environ = "^0.12.0"
drf-spectacular = "^0.28.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^8.4.2"
factory-boy = "^3.3.3"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
