[tool.poetry]
name = "viral-marketing"
version = "0.1.0"
description = "Viral marketing Django project for Team6"
authors = ["Team6 <team6@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.11"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
